# AtlasTrace

./: LICENSE  README.md  atlastrace.py  pyproject.toml
.atlastrace/: atlastrace.sqlite3
.atlastrace/cases/atlastrace-demo/artifacts/: 2026-05-01T08-29-06+00-00-README.md
.atlastrace/cases/atlastrace-demo/reports/: case-graph.mmd  case-report.md
.atlastrace/cases/correlation-demo/reports/: correlation-report.md
.atlastrace/cases/overlap-demo-auto/artifacts/: 2026-05-01T09-07-23+00-00-overlap_a.txt
.atlastrace/cases/overlap-demo-auto/reports/: correlation-report.md
.atlastrace/cases/overlap-demo/artifacts/: 2026-05-01T08-41-00+00-00-overlap_b.txt
.atlastrace/cases/overlap-demo/reports/: correlation-report.md
docs/: SOURCES.md
src/atlastrace/: __main__.py  analysis.py  api.py  cli.py  settings.py  storage.py  ui.py  utils.py
src/atlastrace/plugins/: _init_.py  base.py  registry.py
src/atlastrace/services/: _init_.py  breach.py  cases.py  common.py  correlation.py  entities.py  ingest.py  media.py  reporting.py
